Fix: Responsive padding

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <p class="complement">de forma masiva y personalizada.</p>
                     </h1><br>
                     <p>La plataforma más sencilla de usar, todos los canales en nuestra práctica interfaz web. <br><br>
-                        <a href="https://bizarreoctopus.com/" target="_blank" id="buttontext">más información</a>
+                        <a href="#SMS" id="buttontext">más información</a>
                     </div>
                 <div class="col-4 animate__animated animate__fadeInRight">
                     <img src="/assets/messages.png" alt="messages">
