--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
 
             <div class="container text-center" id="rows">
                 <div class="row">
-                  <div class="col-sm">
+                  <div class="col-sm" id="box1">
                     <img src="/assets/grupo-de-chat.png" alt="" id="img">
                     <p class="textA">
                         <span id="number">1.- </span> Carga/selecciona tu base 
                     de datos de contactos 
                     </p>                 
                 </div>
-                  <div class="col-sm order-1">
+                  <div class="col-sm order-1" id="box2">
                     <img src="/assets/escribe-un-mensaje.png" alt="" id="img-write">
                     <p class="textA">
                         <span id="number">2.- </span> Selecciona el canal y crea tu mensaje
                     </p>                   
                 </div>
-                  <div class="col-sm order-2">
+                  <div class="col-sm order-2" id="box3">
                     <img src="/assets/enviar-mensaje.png" alt="" id="img-send">
                     <p class="textA">
                         <span id="number">3.- </span> Envía el mensaje y analiza los datos de tu campaña
